trunk/Archive2/81/1ad4a71a700af7/output
main.cpp: In function 'void print(const VectorInt&)':
main.cpp:30:13: error: lvalue required as left operand of assignment
     v.at(1) = 4;
             ^
